# WRBV-Template

./: Bacon.toml  Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
src/: lib.rs
